objects/ESC_EmailSelectorIDs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_DefaultTemplate__c</fullName>
        <label>Default Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EnhancementRequestTemplate__c</fullName>
        <label>Enhancement Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EnquiryTemplate__c</fullName>
        <label>Enquiry_EmailTemplate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_FeedbackTemplate__c</fullName>
        <label>Feedback EmailTemplate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_HotTopicTemplate__c</fullName>
        <label>ESC_Hot_Topic_Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_IncidentTemplate__c</fullName>
        <label>Incident_EmailTemplate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RequestforServiceTemplate__c</fullName>
        <label>Request_for_Service_EmailTemplate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EmailSelectorIDs</label>
</CustomObject>